# youtube-upload-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  API_INTEGRATION_GUIDE.md  ARCHITECTURE_ALIGNMENT_CHECKLIST.md  CHANNEL_INFO.md  CLAUDE.md  CLI_FRONTEND_PARITY_VERIFICATION.md  CLI_FRONTEND_PARITY_VERIFICATION_V2.md  CLI_FRONTEND_SYNC_CHECKLIST.md  COMPONENT_ARCHITECTURE.md  DEPLOYMENT_READY.md  DOCUMENTATION_INDEX.md  FRONTEND_HARDCODING_REFACTORING_CHECKLIST.md  FRONTEND_REFACTORING_CHECKLIST.md  GRADIO_IMPLEMENTATION_CHECKLIST.md  MULTI_CHANNEL_IMPLEMENTATION_CHECKLIST.md  PLAYWRIGHT_FRONTEND_VERIFICATION_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  STREAMLIT_FAQ.md  STREAMLIT_GUIDE.md  STREAMLIT_VERIFICATION_REPORT.md  TASK.md  TASK_DETAILED.md  TROUBLESHOOTING.md  USER_GUIDE.md  UX_UI_DESIGN.md  WEBSOCKET_REACT_IMPLEMENTATION_CHECKLIST.md  api-cli-gradio-sync-analysis.md  capture_screenshots.py  cli-frontend-sync-test.md  cli.py  dashboard  gradio-cli-sync-verification.md  gradio-verification-checklist.md  gradio_app.py  gradio_app_backup.py  gradio_utils.py  gradio_utils_backup.py  (+22 more)
.streamlit/: config.toml
backend/: Makefile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 14aedf8664eb_remove_schedule_tables_and_apscheduler_.py  8b8edc5f7d81_add_schedule_model_for_batch_processing_.py  8d1516ddf044_auto_migration.py  95ba76b307f6_create_initial_tables.py  d6fd082abbaa_remove_tts_fields_from_scripts_table.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: constants.py  exceptions.py  logging.py  responses.py  serializers.py  structured_logging.py  validators.py  yaml_loader.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  schedule.py  script.py
backend/app/repositories/: __init__.py  base.py  schedule_repository.py  script_repository.py
backend/app/routers/: __init__.py  scheduler.py  schedules.py  scripts.py  system.py  upload.py  web.py  websocket.py
backend/app/services/: __init__.py  scheduler_service.py  script_parser.py  script_service.py  upload_service.py  websocket_manager.py  youtube_client.py
backend/app/templates/: base.html  error.html  index.html
backend/tests/: README_TESTING.md  __init__.py  conftest.py  debug_test.py  simple_integration_test.py  test_app.py  test_integration_final.py  test_integration_fixed.py  test_json_serialization.py  test_main.py
backend/tests/integration/: __init__.py  test_scripts_api.py  test_system_api.py  test_upload_api.py  test_youtube_auth.py  test_youtube_client.py
backend/tests/unit/: __init__.py  test_script_parser.py  test_script_service.py  test_upload_service.py  test_validators.py
cli/: __init__.py  main.py  requirements.txt
cli/commands/: __init__.py  script.py  status.py  video.py  youtube.py
cli/utils/: api_client.py  config.py  date_mapping.py  interactive.py  progress.py  realtime.py  validators.py
config/: channels.yaml
docs/: API.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLI_USAGE.md  DEPLOYMENT_READY.md  FAQ.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  JSON_SERIALIZATION.md  PRD.md  QUICK_START.md  TECHNICAL_SPEC.md  TESTING_GUIDE.md  USER_GUIDE.md  WORKFLOW.md  prompt.md
frontend/: .env.example  eslint.config.js  jest.config.js  package-lock.json  package.json  performance-analysis.md  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/app/: app.tsx  globals.css  routes.tsx
frontend/src/components/: ConnectionStatus.tsx  NotificationPanel.tsx  PipelineFlow.tsx  RealTimeNotifications.tsx  Toaster.tsx  WebSocketProvider.tsx  WebSocketStatus.tsx
frontend/src/constants/: styles.ts  text.ts  ui.ts  youtube.ts
frontend/src/contexts/: PermissionsContext.tsx  ToastContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useAccessibility.ts  useDashboardData.ts  useRetry.ts  (+15 more)
gradio_app/: __init__.py  config.py  main.py  utils.py
gradio_app/managers/: __init__.py  base.py  script_manager.py  status_manager.py  video_manager.py  youtube_manager.py
gradio_app/templates/: error_message.html  pipeline_dashboard.html  real_time_monitor.html  script_detail.html  script_stats.html  success_message.html
scripts/: README_BACKUP.md  backup_database.py
streamlit_app/: README.md  app.py  config.py
streamlit_app/assets/: styles.css
streamlit_app/components/: api_client.py  data_utils.py  ui_components.py
streamlit_app_backup_20250818_001919/: main.py
streamlit_app_backup_20250818_001919/api/: client.py
streamlit_app_backup_20250818_001919/pages/: dashboard.py  monitoring.py  scripts.py  settings.py  uploads.py
(+139 files in other folders)
